<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sensor Test</string>
    <string name="menu_settings">Settings</string>

      <!-- Strings for layout/sensors -->
    <string name="sensors_activity_title">SDK Controller &gt; Sensors</string>
    <string name="sensors_top_description">Available Sensors:</string>
    <string name="sensors_sample_rate">Sample Rate</string>
    <string name="sensors_hz_per_sensor">Hz per sensor</string>
    <string name="sensors_actual_rate">Actual</string>
    <string name="sensors_hz_average">Hz average</string>
    <!-- Default sample rate for SensorsActivity UI.
         Should match the default for SensorsHandler.mUpdateTargetMs. -->
    <string name="sensors_default_sample_rate">20</string>
    
</resources>