<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensors_sample_rate"
                android:gravity="right"
                android:layout_marginRight="8dp"
                />
            <EditText
                android:id="@+id/textSampleRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="4"
                android:gravity="right"
                android:imeOptions="actionNone|flagNoExtractUi|flagNoFullscreen|"
                android:inputType="number"
                android:text="@string/sensors_default_sample_rate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensors_hz_per_sensor" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginRight="8dp"
                android:text="@string/sensors_actual_rate" />

            <TextView
                android:id="@+id/textActualRate"
                android:gravity="right"
                android:text="--"
                tools:ignore="HardcodedText"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensors_hz_average" />

        </TableRow>

    </TableLayout>
 <LinearLayout
     android:id="@+id/adLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <com.google.ads.AdView android:id="@+id/adView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         ads:adUnitId="a15159c2bed272b"
                         ads:adSize="SMART_BANNER"
                         ads:loadAdOnCreate="true"/>
     
        </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sensors_top_description" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:saveEnabled="false" />

    </ScrollView>

</LinearLayout>